--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,6 +1,5 @@
 artifacts_root: artifacts
 
-
 data_ingestion:
   root_dir: artifacts/data_ingestion
   source_URL: https://drive.google.com/file/d/1vlhZ5c7abUKF8xXERIw6m9Te8fW7ohw3/view?usp=sharing
@@ -15,3 +14,8 @@ prepare_base_model:
   models_updated_base_model_path: models/base_model_updated.h5
 
 models_root: models
+
+training:
+  root_dir: artifacts/training
+  trained_model_path: artifacts/training/model.h5
+  models_trained_model_path: models/model.h5
