--- a/config/config.yaml
+++ b/config/config.yaml
@@ -10,12 +10,12 @@ prepare_base_model:
   root_dir: artifacts/prepare_base_model
   base_model_path: artifacts/prepare_base_model/base_model.h5
   updated_base_model_path: artifacts/prepare_base_model/base_model_updated.h5
-  models_base_model_path: models/base_model.h5
-  models_updated_base_model_path: models/base_model_updated.h5
+  models_base_model_path: model/base_model.h5
+  models_updated_base_model_path: model/base_model_updated.h5
 
-models_root: models
+models_root: model
 
 training:
   root_dir: artifacts/training
   trained_model_path: artifacts/training/model.h5
-  models_trained_model_path: models/model.h5
+  models_trained_model_path: model/model.h5
